--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -7,5 +7,8 @@ $navbar-default-link-hover-color: white;
 $navbar-default-link-hover-bg: black;
 
 @import 'bootstrap';
+@import 'posts';
+@import 'comments';
+@import 'custom';
 
 body { padding-top: 60px; }
