--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .post {
-  border: 1px solid $gray-light;
+  border: 1px solid $gray;
   border-radius: 5px;
   padding:1em;
   margin-bottom: 1em;
